# tensorflow-datasets-bw

./: .flake8  .gitignore  .travis.yml  MANIFEST.in  README.md  download_and_prepare.py  example_bsds500.ipynb  requirements.txt  run_tests.py  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json
tensorflow_datasets_bw/: __init__.py  bsds500.py  mdsp_color_sr.py  schelten_kernels.py  set14.py  set5.py  utils.py  visualize.py
tensorflow_datasets_bw/bsds500/: __init__.py  bsds500.py  bsds500_test.py  checksums.tsv
tensorflow_datasets_bw/burst_sr/: __init__.py  burst_sr.py  burst_sr_test.py  checksums.tsv
tensorflow_datasets_bw/cbsd68/: __init__.py  cbsd68.py  cbsd68_test.py  checksums.tsv
tensorflow_datasets_bw/flickr2k/: __init__.py  flickr2k.py  flickr2k_test.py
tensorflow_datasets_bw/hci_lf/: __init__.py  hci_lf.py  hci_lf_test.py
tensorflow_datasets_bw/kodak24/: __init__.py  checksums.tsv  kodak24.py  kodak24_test.py
tensorflow_datasets_bw/mc_master/: __init__.py  mc_master.py  mc_master_test.py
tensorflow_datasets_bw/mdsp_color_sr/: __init__.py  checksums.tsv  mdsp_color_sr.py  mdsp_color_sr_test.py
tensorflow_datasets_bw/schelten_kernels/: __init__.py  checksums.tsv  schelten_kernels.py  schelten_kernels_test.py
tensorflow_datasets_bw/set14/: __init__.py  checksums.tsv  set14.py  set14_test.py
tensorflow_datasets_bw/set5/: __init__.py  checksums.tsv  set5.py  set5_test.py
tensorflow_datasets_bw/url_checksums/: bsds500.txt  set14.txt  (+3 more)
tests/: __init__.py  bsds500_test.py  schelten_kernels_test.py  set14_test.py  set5_test.py
(+16 files in other folders)
