[metadata]
name = tensorflow-datasets-bw
version = 0.6.4
description = Extensions to TensorFlow Datasets
author = Benjamin Wilhelm
author_email = benjamin.wilhelm@uni-konstanz.de
url = https://github.com/HedgehogCode/tensorflow-datasets-bw

[options]
packages = find:
include_package_data = True
install_requires =
    scipy
    imageio
    tensorflow-datasets >= 4.2
